# I2PChat

./: .gitattributes  .gitignore  .gitleaks.toml  AUDIT.md  AUDIT_EN.md  AUDIT_RU.md  AUDIT_codex5.3-high.MD  AUTHORS  DEBUG_REPORT.md  Dockerfile.appimage  I2PChat-tui.spec  I2PChat.icns  I2PChat.spec  ISSUE_BACKLOG.md  KEY.gpg  LICENSE  README.md  RELEASE.md  RELEASE_0.2.1.md  RELEASE_0.3.1  RELEASE_0.3.1.md  RELEASE_0.4.0.md  RELEASE_0.4.1.md  RELEASE_0.5.0.md  RELEASE_0.5.2.md  RELEASE_0.5.3.md  RELEASE_0.6.0.md  RELEASE_0.6.1.md  RELEASE_0.6.2.md  RELEASE_0.6.4.md  REMEDIATION_PLAN.md  ROADMAP.md  SHA256SUMS  blindbox_blob.py  blindbox_client.py  blindbox_diagnostics.py  blindbox_key_schedule.py  blindbox_local_replica.py  blindbox_state.py  build-linux.sh  (+42 more)
debian/: changelog  control  copyright  i2pchat-tui.desktop  i2pchat-tui.install  i2pchat-tui.lintian-overrides  i2pchat.desktop  i2pchat.install  i2pchat.lintian-overrides  python3-i2pchat.install  python3-i2pchat.lintian-overrides  rules  system-router-only
docs/: ARCHITECTURE.md  AUDIT_EN.md  AUDIT_RU.md  BUILD.md  CODEBASE_MAP.md  CURSOR_SAM_MILESTONE_REPORT.md  GITHUB_BACKLOG_SYNC.md  GUI_MANUAL_EN.md  GUI_MANUAL_RU.md  INSTALL.md  ISSUE_BACKLOG.md  ISSUE_BACKLOG_RU.md  MANUAL_EN.md  MANUAL_RU.md  PROTOCOL.md  ROADMAP.md  ROADMAP_RU.md  SAM_INTERNAL_BACKEND_PLAN.md  VENDORED_I2PLIB_POLICY.md
i2pchat/: __init__.py  crypto.py  logging_setup.py  run_gui.py  run_tui.py  tui.py
i2plib/: VENDORED_UPSTREAM.json  __init__.py  aiosam.py  sam.py
packaging/: README.md  refresh-checksums.sh  refresh-linux-sha256sums.sh
scripts/: backlog.env.example  ensure_bundled_i2pd.sh  fetch_bundled_i2pd.sh  install_blindbox_replica.sh  release-tag.sh  run_tests.applescript  run_tests.command  run_tests.sh  run_tests_via_applescript.sh  stage_i2pd_linux_shlibs.sh  (+4 more)
(+255 files in other folders)
